# stroke-prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
stroke_prediction/: __init__.py  dataset.py  features.py  plots.py
stroke_prediction/modeling/: predict.py  train.py
