[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stroke_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "CESAR School" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["stroke_prediction"]
include = ["pyproject.toml", "stroke_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["stroke_prediction"]
force-sort-within-sections = true

